turtleart.lessons.turtleart.Main.House.scala.error
Source:14: error: x is already defined as variable x
		var x = getX()
                    ^Source:15: error: y is already defined as variable y
	var y = getY()
            ^