turtleart.lessons.turtleart.Main.House.scala.code
override def run() {
	avance(100)
		var x = getX()
	var y = getY()
	droite(30)
	avance(100)
	allerVers(x+100,y)
	allerVers(x,y)
	for (i<- 1 to 4) {
	avance(100)
	droite(90)
	}
	avance(100)
		var x = getX()
	var y = getY()
	droite(30)
	avance(100)
	allerVers(x+100,y)
	allerVers(x,y)
}
